fix: add text ellipsis for overflow in relationEvent (#143)

--- a/src/components/chat/index.sass
+++ b/src/components/chat/index.sass
@@ -103,8 +103,8 @@
 .relationEvent
 	display: flex
 	align-items: flex-end
+	overflow-wrap: anywhere
 	width: 100%
-
 	.relationEventWrapper
 		padding-bottom: 2 * $r
 	.relationEventCaption
@@ -123,6 +123,13 @@
 	::v-deep
 		.previewMessage
 			font-size: 0.9em
+			.msgtext
+				label
+					display: -webkit-box
+					-webkit-box-orient: vertical
+					-webkit-line-clamp: 3
+					overflow: hidden
+					text-overflow: ellipsis
 
 		.statusWrapper
 			display: none
